--- a/tuff/twitter_feed/templates/twitter_feed/latest_tweets.html
+++ b/tuff/twitter_feed/templates/twitter_feed/latest_tweets.html
@@ -1,4 +1,7 @@
-<div class="tweets">
+{% extends "base.html" %}
+
+{% block body %}
+<div class="container tweets">
   <ul>
     {% for tweet in tweets %}
       <li>
@@ -8,3 +11,4 @@
     {% endfor %}
   </ul>
 </div>
+{% endblock %}
