--- a/tuff/static/css/main.css
+++ b/tuff/static/css/main.css
@@ -1,22 +1,6 @@
-
-
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+body {
+  background-color: #ffefd7;
+}
+.tuff-navbar {
+  height: 100px;
+}
