--- a/tuff/templates/base.html
+++ b/tuff/templates/base.html
@@ -3,73 +3,26 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{% block title %}tuff{% endblock title %}</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>{% block title %}TUFF{% endblock title %}</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <!-- Le styles -->
-    <link href="{% static 'libs/bootstrap-3.3.5/css/bootstrap.css' %}" rel="stylesheet">
-    <style>
-      body {
-        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-      }
-    </style>
+    <link href="{% static 'libs/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/main.css' %}" rel="stylesheet">
 
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
-    <!-- This file store project specific CSS -->
-    <link href="{% static 'css/tuff.css' %}" rel="stylesheet">
-
-    <!-- Use this to quickly test CSS changes in a template,
-        then move to tuff.css -->
-    {% block extra_css %}{% endblock extra_css %}
   </head>
 
-  <body>
+  <body class="body">
+    <div class="navbar navbar-inverse navbar-fixed-top tuff-navbar"></div>
 
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">tuff</a>
-        </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
+    {% block body %}
+    {% endblock %}
 
-    <div class="container">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="{% static 'libs/bootstrap/js/bootstrap.min.js' %}"></script>
 
-      <h1>{% block page_title %}Example Base Template{% endblock page_title %}</h1>
-
-      {% block content %}
-        <p>Use this document as a way to quick start any new project.</p>
-      {% endblock content %}
-
-    </div> <!-- /container -->
-
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-
-    <!-- place project specific Javascript in this file -->
-    <script src="{% static 'js/tuff.js' %}"></script>
-
-    {% block extra_js %}{% endblock extra_js %}
   </body>
 </html>
