--- a/tuff/twitter_feed/templates/twitter_feed/latest_tweets.html
+++ b/tuff/twitter_feed/templates/twitter_feed/latest_tweets.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 
 {% block body %}
-<div class="container tweets">
-  <ul>
-    {% for tweet in tweets %}
-      <li>
-        <p>{{ tweet.content }}</p>
-        <p class="date">{{ tweet.published_at|date:"F d, Y H:m:s" }}</p>
-      </li>
-    {% endfor %}
-  </ul>
+<div class="container tuff-mainContainer">
+	<ul>
+		{% for tweet in tweets %}
+		<li>
+			<p>{{ tweet.content }}</p>
+			<p class="date">{{ tweet.published_at|date:"F d, Y H:m:s" }}</p>
+		</li>
+		{% endfor %}
+	</ul>
 </div>
 {% endblock %}
