--- a/Less/main.less
+++ b/Less/main.less
@@ -1,17 +1,26 @@
-@tuff-primary-light:    #fff6e9;
-@tuff-primary-medium:   #fffef9;
-@tuff-primary-dark:     #ffefd7;
-@tuff-secondary-light:  #e3f0ff;
-@tuff-secondary-dark:   #d2e7ff;
+@tuff-primary-extralight:  	#C8CEAC;
+@tuff-primary-light:    	#C1BB9C;
+@tuff-primary-medium:   	#A6B394;
+@tuff-primary-dark:     	#86AF96;
+@tuff-primary-extradark:    #828D83;
 
 body {
-	background-color: @tuff-primary-dark;
+	background-color: @tuff-primary-extralight;
 }
 
 .tuff-navbar {
   height: 100px;
+  background-color: @tuff-primary-dark;
 }
 
 .tuff-mainContainer {
 	padding-top: 120px;
+}
+
+.tuff-rightContainer {
+  background-color: @tuff-primary-light;
+}
+
+.tuff-leftContainer {
+  background-color: @tuff-primary-light;
 }
